[gd_scene load_steps=3 format=3 uid="uid://dq0242qa1qm1s"]

[ext_resource type="Script" path="res://src/states/menu/options_menu.gd" id="1_b0q2v"]

[sub_resource type="LabelSettings" id="LabelSettings_te0l8"]
font_size = 59

[node name="OptionsMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0q2v")

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="V"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_te0l8")
horizontal_alignment = 1

[node name="V" type="VBoxContainer" parent="V"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="Button" parent="V/V"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="FullscreenCheck" type="CheckButton" parent="V/V"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="ExpandAnalogCheck" type="CheckButton" parent="V/V"]
unique_name_in_owner = true
layout_mode = 2
text = "Expand Analog Range
(Simulate modded controller)"

[node name="M" type="MarginContainer" parent="V/V"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="H" type="HBoxContainer" parent="V/V/M"]
layout_mode = 2

[node name="Label" type="Label" parent="V/V/M/H"]
layout_mode = 2
text = "FOV"

[node name="FovSlider" type="HSlider" parent="V/V/M/H"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 50.0
max_value = 120.0
value = 70.0

[node name="FovLabel" type="Label" parent="V/V/M/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "70"
horizontal_alignment = 2

[connection signal="pressed" from="V/V/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="V/V/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="V/V/ExpandAnalogCheck" to="." method="_on_expand_analog_check_toggled"]
[connection signal="value_changed" from="V/V/M/H/FovSlider" to="." method="_on_fov_slider_value_changed"]
